# IronOxide

./: Cargo.toml  README.md  bvh.rs  collider.rs  component.rs  components.rs  main.rs  physics.rs  renderer.rs  utils.rs
examples/boid/: Cargo.toml
examples/boid/src/: main.rs
examples/platformer/: Cargo.toml
examples/platformer/src/: main.rs
examples/simple_collisions/: Cargo.toml
examples/simple_collisions/src/: circle.jfif  main.rs
lib/: cargo.toml  src.rs
lib/src/: bvh.rs  collider.rs  component.rs  lib.rs  new_bvh.rs  physics.rs  renderer.rs  tests.rs  utils.rs
